static/css/global.css
@import url('http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700');
@import url('http://fonts.googleapis.com/css?family=Open+Sans');

/* Font importing */
@font-face {
    font-family: 'PWIcons';
    src: url('../font/PWIcons.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}
.es-logo {font-family: 'PWIcons'}
.es-logo:before {content: "G";}

/* resets */
body {
	height: 100%;
}


/* margin */
.margin_t_10 {margin-top: 10px;}
.margin_t_12 {margin-top: 12px;}
.margin_t_14 {margin-top: 14px;}
.margin_t_16 {margin-top: 16px;}
.margin_t_18 {margin-top: 18px;}
.margin_t_20 {margin-top: 20px;}
.margin_t_30 {margin-top: 30px;}
.margin_t_40 {margin-top: 40px;}

.margin_b_40 {margin-bottom: 40px;}

.margin_r_10 {margin-right: 10px;}


/* padding */
.padding_t_100 {padding-top: 100px;}


/* width and height */
.height_100 {height: 100px;}
.height_200 {height: 200px;}
.height_300 {height: 300px;}
.minheight_500 {min-height: 500px;}
.minheight_800 {min-height: 800px;}

/* position */
.absolute {position: absolute;}
.relative {position: relative;}

/* display */
.block {display: block;}
.inline_block {display: inline-block;}
.inline {display: inline;}

/* Font size */
.text_20 {font-size: 20px;}
.text_30 {font-size: 30px;}
.text_40 {font-size: 40px;}
.text_46 {font-size: 46px;}
.text_50 {font-size: 50px;}
.text_70 {font-size: 70px;}
.text_100 {font-size: 100px;}
.text_150 {font-size: 150px;}
.text_170 {font-size: 170px;}

@media (max-width: 767px) {
	.text_36_s {
		font-size: 36px;
	}
}

/* Font Family */
.ubuntu {font-family: 'Ubuntu', Arial;}
.opensans {font-family: 'Open Sans', Arial;}

/* Font weight */
.weight_700 {font-weight: 700;}

/* Color */
.white {color: white;}


/* Text */
.text_shadow_light {text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);}
.text_shadow_medium {text-shadow: 0 3px 6px rgba(0, 0, 0, 0.7);}

.caps {text-transform: uppercase;}

.center {text-align: center;}

/* cursor */
.pointer {cursor: pointer;}


/* */
.boxcenter {margin-left: auto; margin-right: auto;}


/* hover effects */
.hover_blue {
	transition: color 0.5s ease;
}
.hover_blue:hover {
	color: #6CA3E8;
}

/* links */
a.nostyle {
	text-decoration: inherit;
	color: inherit;
}
a.nostyle:hover {
	text-decoration: inherit;
	color: inherit;
}


/* background */
.bg_dark_20 {
	background-color: none;
	background-color: rgba(0,0,0,0.2);
}


/* specials */

.curtain {
	height: auto;
	width: 100%;
	background-repeat: no-repeat;
	background-size: cover;
	background-attachment: fixed;
}

